manifests/database.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pg-stset
spec:
  serviceName: pg-svc
  replicas: 1
  selector:
    matchLabels:
      app: pg-app
  template:
    metadata:
      labels:
        app: pg-app
    spec:
      containers:
        - name: pg-container
          image: PROJECT/DB_IMAGE
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pg-store
              mountPath: /var/lib/postgresql/data
              subPath: postgres
  volumeClaimTemplates:
    - metadata:
        name: pg-store
      spec:
        accessModes: ["ReadWriteMany"] # ReadWriteOnce
        # storageClassName: local-path # GKE
        resources:
          requests:
            storage: 500Mi
---
# the associated service
apiVersion: v1
kind: Service
metadata:
  name: pg-svc
spec:
  clusterIP: None # NodePort?
  selector:
    app: pg-app
  ports:
    - port: 80
      protocol: TCP
      targetPort: 5432
